# scl-alpha

./: .env.example  .gitignore  features.py  railway.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: app.py  readme.md
app/pages/: 0_model_lab.py  1_signals.py  2_backtest.py  4_data.py  output.py  pre_data.py  predictions.py  sandbox_models.py
notebooks/: 01_full_pipeline.ipynb
pages/: 0_model_lab.py  3_explain.py
scl-alpha/: Dockerfile  README.md  streamlit_app.py
scl-alpha/app/: app.py
scl-alpha/app/pages/: 0_model_lab.py  1_signals.py  3_explain.py  4_data.py  5_full_scl_alpha_model.py
scl-alpha/pages/: 4_data.py  5_full_scl_alpha_model.py
scl-alpha/scl-alpha/: pyproject.toml  requirements.txt
scl-alpha/scl-alpha/app/pages/: 2_backtest.py  3_explain.py
scl-alpha/scl-alpha/data/: README.md
scl-alpha/scl-alpha/pages/: 1_signals.py  2_backtest.py
scl-alpha/scl-alpha/scl_alpha.egg-info/: SOURCES.txt
scl-alpha/scl-alpha/src/: app_runner.py
scl-alpha/scl_alpha.egg-info/: PKG-INFO  requires.txt
scl-alpha/src/: app_runner.py  backtest.py  config.py  data_pull.py  full_scl_alpha_model.py  model.py
scl-alpha/tests/: test_backtest.py
src/: __init__.py  app_runner.py  backtest.py  config.py  data_pull.py  features.py  metrics.py  model_runner.py
tests/: conftest.py  test_features.py
